2013-06-03  Robert Hogan  <robert@webkit.org>

        Painting collapsed borders during scrolling
        https://bugs.webkit.org/show_bug.cgi?id=85658

        Reviewed by David Hyatt.

        Test: fast/repaint/table-cell-collapsed-border-scroll.html

        WHen painting collapsed borders we need to paint the borders of the row above
        the topmost dirtied row so that we compute the correct value for the dirtied row's collapsed border.

        * rendering/RenderTableSection.cpp:
        (WebCore::RenderTableSection::paintObject):

2013-06-11  Peter Gal  <galpeter@inf.u-szeged.hu>

        [curl] Custom HTTP method support
        https://bugs.webkit.org/show_bug.cgi?id=117302

        Reviewed by Kenneth Rohde Christiansen.

        No new tests, already covered by existing ones like:
        http/tests/xmlhttprequest/workers/methods.html
        http/tests/xmlhttprequest/workers/methods-async.html

        * platform/network/curl/ResourceHandleManager.cpp:
        (WebCore::ResourceHandleManager::initializeHandle):

2013-06-11  Seokju Kwon  <seokju.kwon@gmail.com>

        Web Inspector: Remove 'using namespace std'
        https://bugs.webkit.org/show_bug.cgi?id=117498

        Reviewed by Anders Carlsson.

        No new tests, no behavior change.

        * inspector/InspectorAgent.cpp: Remove unneeded 'using namespace std'.
        * inspector/InspectorFrontendClientLocal.cpp: Use explicit std:: qualifiers instead.
        (WebCore::InspectorFrontendClientLocal::constrainedAttachedWindowHeight):
        (WebCore::InspectorFrontendClientLocal::constrainedAttachedWindowWidth):
        * inspector/InspectorFrontendHost.cpp: Remove unneeded 'using namespace std'.
        * inspector/InspectorPageAgent.cpp: Remove unneeded 'using namespace std'.

2013-06-11  Christophe Dumez  <ch.dumez@sisa.samsung.com>

        Support latest Web IDL named property getters
        https://bugs.webkit.org/show_bug.cgi?id=117403

        Reviewed by Kentaro Hara.
