@@ -1,3 +1,15 @@
+2013-06-11  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Remove redundant calls to ceilToFloat in RenderBlock::computeInlinePreferredLogicalWidths
+        https://bugs.webkit.org/show_bug.cgi?id=117490
+
+        Reviewed by Andreas Kling.
+
+        Merge https://chromium.googlesource.com/chromium/blink/+/be336b14325b2938ff6a4fb6191073a6e717a57c.
+
+        * rendering/RenderBlock.cpp:
+        (WebCore::RenderBlock::computeInlinePreferredLogicalWidths):
+
 2013-06-03  Robert Hogan  <robert@webkit.org>
 
         Painting collapsed borders during scrolling
